--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,7 @@
     </section>
 
     <div id="hero-banner">
-      <img src="https://www.nps.gov/common/uploads/structured_data/3C7D5920-1DD8-B71B-0B83F012ED802CEA.jpg"
-        alt="Yellowstone National Park">
+      <img src="">
       <div id="hero-text">
         <h1>Yellowstone</h1>
         <span>National Park</span>
@@ -82,8 +81,14 @@
     </section>
   </header>
 
-  <main id="main"></main>
-  <footer id="park-footer"></footer>
+  <main id="main">
+    <section class="intro"></section>
+    <section class="info"></section>
+  </main>
+  <footer id="park-footer">
+  </footer>
+
+
 </body>
 
 </html>
