--- a/src/conditions.html
+++ b/src/conditions.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="national parks, yellowstone, activities, parks, yosemite" />
   <title>Yellowstone National Park</title>
   <link rel=" stylesheet" href="css/style.css" />
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/conditions.js"></script>
 </head>
 
 <body>
@@ -85,8 +85,27 @@
   </header>
 
   <main id="main">
-    <section class="intro"></section>
-    <section class="info"></section>
+    <h1>Current Conditions</h1>
+    <section class="alerts">
+      <h2>Alerts</h2>
+      <ul></ul>
+    </section>
+    <section class="visitor">
+      <h2>Visitor Services</h2>
+      <details name="current-details">
+        <summary>Visitor Centers</summary>
+        <ul></ul>
+      </details>
+    </section>
+    <section class="activities">
+      <h2>Activities</h2>
+      <details name="current-details">
+        <summary>All Activities</summary>
+        <ul></ul>
+      </details>
+    </section>
+  </main>
+
   </main>
   <footer id="park-footer">
   </footer>
