--- a/goalnerd/index.html
+++ b/goalnerd/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="GoalNerd - Soccer stats and analytics for fans who want to stay informed and engaged." />
+  <meta name="description"
+    content="GoalNerd - Soccer stats and analytics for fans who want to stay informed and engaged." />
   <title>GoalNerd | Soccer Stats Made Smart</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/loader.js" defer></script>
 </head>
+
 <body>
 
   <header>
@@ -26,7 +29,7 @@
         <button type="submit">Search</button>
       </form>
     </nav>
-  </header> 
+  </header>
 
   <main>
     <section class="hero">
@@ -61,10 +64,6 @@
   <footer>
     <p>&copy; 2025 GoalNerd. All Rights Reserved.</p>
   </footer>
-<div id="loader">
-  <img src="pictures/ball.png" alt="Loading ball" class="loader-ball">
-  <p class="loader-text">Kicking off…</p>
-</div>
 </body>
 
 </html>
