--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,12 @@
     <!-- Menú principal: añadimos class="global-nav" para que apliquen estilos -->
     <nav id="global-nav" class="global-nav" aria-label="Primary" hidden>
       <ul class="global-nav__list">
-        <li><a class="global-nav__item" href="#main">Plan your visit</a></li>
+        <h2>Explore this Park</h2>
+        <li class="dropdown">
+          <a href="#main" class="global-nav__item">• Plan your visit ▾</a>
+          <ul class="dropdown-menu">
+          </ul>
+        </li>
 
       </ul>
     </nav>
