--- a/goalnerd/index.html
+++ b/goalnerd/index.html
@@ -19,7 +19,7 @@
         <a href="index.html"><img class="logo" src="pictures/logo.png" alt="GoalNerd Logo"></a>
       </div>
       <ul class="nav-links">
-        <li><a href="players.html">Players</a></li>
+        <li><a href="players.html">Playersww</a></li>
         <li><a href="leagues.html">Leagues</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="stats.html">My Stats</a></li>
