--- a/goalnerd/index.html
+++ b/goalnerd/index.html
@@ -8,7 +8,7 @@
     content="GoalNerd - Soccer stats and analytics for fans who want to stay informed and engaged." />
   <title>GoalNerd | Soccer Stats Made Smart</title>
   <link rel="stylesheet" href="css/styles.css" />
-  <script src="js/loader.js" defer></script>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <a href="index.html"><img class="logo" src="pictures/logo.png" alt="GoalNerd Logo"></a>
       </div>
       <ul class="nav-links">
-        <li><a href="players.html">Playersww</a></li>
+        <li><a href="players.html">Players</a></li>
         <li><a href="leagues.html">Leagues</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="stats.html">My Stats</a></li>
@@ -45,8 +45,8 @@
       <article class="card">
         <div class="card-image placeholder"></div>
         <div class="card-content">
-          <p class="card-label">Today's Game</p>
-          <h3 class="card-title">Game Name</h3>
+          <p class="card-label">Today's Team</p>
+          <h3 class="card-title">Team Name</h3>
         </div>
       </article>
 
