--- a/src/conditions.html
+++ b/src/conditions.html
@@ -4,19 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="This is website about National Parks, it gives information about the services provided." />
-  <meta name="keywords" content="national parks, yellowstone, activities, parks, yosemite" />
-  <title>Yellowstone National Park</title>
-  <link rel=" stylesheet" href="css/style.css" />
-  <script type="module" src="js/conditions.js"></script>
+  <meta name="description" content="Current conditions, alerts, and visitor centers for Yellowstone National Park." />
+  <meta name="keywords" content="yellowstone, conditions, alerts, visitor centers, national park" />
+  <title>Yellowstone National Park - Current Conditions</title>
+
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="css/conditions.css" />
+
+  <script type="module" src="js/conditions.js" defer></script>
 </head>
 
 <body>
   <p class="disclaimer">
     This is not a real NPS website. It is an educational exercise. If you
     landed here by accident, to find the real website visit
-    <a href="parkUrl">[park name]</a>
+    <a href="https://www.nps.gov/yell/index.htm">Yellowstone</a>
   </p>
 
   <header>
@@ -25,24 +28,88 @@
         <span class="logo" role="presentation"></span>
         <span>National Park Service</span>
       </a>
+
       <div class="global-header__right">
-        <a class="search-icon" href="#park-footer">
+        <a class="search-icon" href="#park-footer" aria-label="Search">
           <svg class="icon">
             <use xlink:href="/images/sprite.symbol.svg#search"></use>
           </svg>
           <span class="visually-hidden">Search</span>
         </a>
-        <button id="global-nav-toggle">
-          <svg class="icon">
-            <use xlink:href="/images/sprite.symbol.svg#menu"></use>
-          </svg>
-          <span class="visually-hidden">Open</span>MENU
+
+        <button id="global-nav-toggle" aria-expanded="false" aria-controls="global-nav">
+          <span class="state-closed">
+            <svg class="icon">
+              <use xlink:href="/images/sprite.symbol.svg#menu"></use>
+            </svg>
+          </span>
+          <span class="state-open">
+            <h1>Close</h1>
+            <img src="images/Close-256.png" alt="close menu" class="icon-close">
+          </span>
         </button>
       </div>
     </section>
 
+
+    <nav id="global-nav" class="global-nav">
+      <ul class="global-nav__list">
+        <li>
+          <div class="global-nav__split-button">
+            <a href="#">Plan Your Visit</a>
+            <button class="global-nav__split-button__toggle" aria-expanded="false">
+              <span class="visually-hidden">Toggle submenu</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use xlink:href="/images/sprite.symbol.svg#arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <ul class="global-nav__submenu">
+            <li><a href="#">Find a Park</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Passes</a></li>
+            <li><a href="#">Trip Ideas</a></li>
+          </ul>
+        </li>
+        <li>
+          <div class="global-nav__split-button">
+            <a href="#">Learn & Explore</a>
+            <button class="global-nav__split-button__toggle" aria-expanded="false">
+              <span class="visually-hidden">Toggle submenu</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use xlink:href="/images/sprite.symbol.svg#arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <ul class="global-nav__submenu">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Discover History</a></li>
+            <li><a href="#">Explore Nature</a></li>
+            <li><a href="#">Kids</a></li>
+          </ul>
+        </li>
+        <li>
+          <div class="global-nav__split-button">
+            <a href="#">Get Involved</a>
+            <button class="global-nav__split-button__toggle" aria-expanded="false">
+              <span class="visually-hidden">Toggle submenu</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use xlink:href="/images/sprite.symbol.svg#arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <ul class="global-nav__submenu">
+            <li><a href="#">Donate</a></li>
+            <li><a href="#">Partner</a></li>
+            <li><a href="#">Volunteer</a></li>
+            <li><a href="#">Work for Us</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
     <div id="hero-banner">
-      <img src="">
+      <img src="" alt="Yellowstone National Park" />
       <div id="hero-text">
         <h1>Yellowstone</h1>
         <span>National Park</span>
@@ -106,11 +173,8 @@
     </section>
   </main>
 
-  </main>
   <footer id="park-footer">
   </footer>
-
-
 </body>
 
 </html>
