--- a/src/index.html
+++ b/src/index.html
@@ -34,35 +34,79 @@
           <span class="visually-hidden">Search</span>
         </a>
 
-        <!-- Botón del menú con estados accesibles -->
         <button id="global-nav-toggle" aria-expanded="false" aria-controls="global-nav">
-
-          <span class="state-closed"><svg class="icon">
+          <span class="state-closed">
+            <svg class="icon">
               <use xlink:href="/images/sprite.symbol.svg#menu"></use>
-            </svg></span>
+            </svg>
+          </span>
 
           <span class="state-open">
-            <img src="images/Close-256.png" alt=" close menu" class="icon-close">
+            <h1>Close</h1>
+            <img src="images/Close-256.png" alt="close menu" class="icon-close">
           </span>
         </button>
       </div>
     </section>
 
-    <!-- Menú principal: añadimos class="global-nav" para que apliquen estilos -->
-    <nav id="global-nav" class="global-nav" aria-label="Primary" hidden>
+    <nav id="global-nav" class="global-nav">
       <ul class="global-nav__list">
-        <h2>Explore this Park</h2>
-        <li class="dropdown">
-          <a href="#main" class="global-nav__item">• Plan your visit ▾</a>
-          <ul class="dropdown-menu">
+        <li>
+          <div class="global-nav__split-button">
+            <a href="#">Plan Your Visit</a>
+            <button class="global-nav__split-button__toggle" aria-expanded="false">
+              <span class="visually-hidden">Toggle submenu for Plan Your Visit</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/sprite.symbol.svg#arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <ul class="global-nav__submenu">
+            <li><a href="#">Find a Park</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Passes</a></li>
+            <li><a href="#">Trip Ideas</a></li>
           </ul>
         </li>
-
+        <li>
+          <div class="global-nav__split-button">
+            <a href="#">Learn & Explore</a>
+            <button class="global-nav__split-button__toggle" aria-expanded="false">
+              <span class="visually-hidden">Toggle submenu for Learn & Explore</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/sprite.symbol.svg#arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <ul class="global-nav__submenu">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Discover History</a></li>
+            <li><a href="#">Explore Nature</a></li>
+            <li><a href="#">Kids</a></li>
+          </ul>
+        </li>
+        <li>
+          <div class="global-nav__split-button">
+            <a href="#">Get Involved</a>
+            <button class="global-nav__split-button__toggle" aria-expanded="false">
+              <span class="visually-hidden">Toggle submenu for Get Involved</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/sprite.symbol.svg#arrow"></use>
+              </svg>
+            </button>
+          </div>
+          <ul class="global-nav__submenu">
+            <li><a href="#">Donate</a></li>
+            <li><a href="#">Partner</a></li>
+            <li><a href="#">Volunteer</a></li>
+            <li><a href="#">Work for us</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
 
     <div id="hero-banner">
-      <img src="" alt="" />
+      <img src="images/yellowstone-hero.jpg" alt="Yellowstone National Park" />
       <div id="hero-text">
         <h1>Yellowstone</h1>
         <span>National Park</span>
